# Fancy-Print

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
fancyprint/: __init__.py  printer.py
src/fancyprint/: __init__.py  printer.py
src/fancyprint/ftypes/: __init__.py  align.py  color.py  input_preset.py  preset.py  printer_preset.py  separator_preset.py
src/fancyprint/helpers/: __init__.py  constants.py  types.py
src/fancyprint/presets/ascii/: __init__.py
src/fancyprint/presets/unicode/: box.py
src/fancyprint/utilities/: __init__.py  exec_time.py
tests/: test.py  test_examples.py  test_fp.py
