[build-system]
requires = ["flit_core>=3.7.1", "colorama"]

build-backend = "flit_core.buildapi"

[project]
name = "fancyprint"
version = "0.1.5"
authors = [{ name = "MU", email = "iammu@duck.com" }]
description = "A aesthetic replacement to print()"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/IamMU/Fancy-Print"
"Bug Tracker" = "https://github.com/IamMU/Fancy-Print/issues"


[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = false
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true